# ragcli

./: .dockerignore  .gitignore  Dockerfile  README.md  benchmark_rag.py  benchmark_results.json  config.yaml  config.yaml.example  docker-compose.yml  install.sh  paper.aux  paper.out  paper.tex  pyproject.toml  requirements.txt  setup.py  test_db_connection.py  test_report.md  test_report_generated.md
docs/: ANYTHINGLLM_INTEGRATION.md  friction-audit.md
docs/slides/: presentation.html
docs/visuals/: ragcli-system-map.html  ragcli-system-slides.html
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
ragcli/: __init__.py  __main__.py
ragcli/agents/: planner.py  trace.py
ragcli/api/: __init__.py  models.py  server.py
ragcli/cli/: __init__.py  main.py
ragcli/config/: __init__.py  config_manager.py  defaults.py
ragcli/core/: document_processor.py  embedding.py  ocr_processor.py  ollama_manager.py  (+3 more)
tests/: test_battle_hardening.py  test_config.py  test_core.py  test_database.py  test_doctor.py  test_document_repository.py  test_innovations.py  test_integration.py  test_oracle_features_suite.py  test_packaging.py  test_performance.py  test_search_fusion.py  test_security.py  test_status.py  test_sync_watcher.py
tui/: Cargo.toml  README.md
tui/src/: app.rs  main.rs  server.rs  theme.rs
tui/src/api/: client.rs  mod.rs  models.rs  stream.rs
tui/src/views/: agents.rs  documents.rs  graph.rs  heatmap.rs  mod.rs  monitor.rs  query.rs  text.rs
tui/src/widgets/: graph.rs  heatmap.rs  help.rs  mod.rs  palette.rs
(+47 files in other folders)
