[project]
name = "oracle-ragcli"
version = "2.0.1"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.9.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "questionary>=2.0.0",
    "oracledb>=1.4.0",
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
    "plotly>=5.17.0",
    "langchain-oracledb>=0.1.0",
    "tiktoken>=0.7.0",
    "numpy>=1.26.0",
    "umap-learn>=0.5.0",
    "scikit-learn>=1.4.0",
    "psutil>=5.9.0",
    "pypdf2>=3.0.1",
    "pdfplumber>=0.10.3",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.0.0",
    "watchdog>=3.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
