[package]
name = "ragcli-tui"
version = "0.1.0"
edition = "2021"
description = "Terminal dashboard for ragcli RAG system"

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tui-textarea = "0.7"
strum = { version = "0.26", features = ["derive"] }
futures-util = "0.3"
unicode-segmentation = "1.11"
anyhow = "1"
